# GBA_MultiMenu_GUI

./: .gitingore  Config.py  I18n.py  LKMenuGUI.py  MenuBuilder.py  MultiMenuGUI_pyside6.py  MultiMenuGUI_tkinter.py  MultiMenuTUI_textual.py  Patcher.py  README.md  Resource.py  lk_multimenu.gba  pyproject.toml  requirements.txt
Utils/: HeaderReader.py
batteryless_patch/: CMakeLists.txt  build.sh
batteryless_patch/src/: batteryless_patch.cpp  payload_bin.cpp  payload_bin.h
batteryless_patch/src_payload/: payload.c  payload.ld
batteryless_patch_py/: batteryless_patch.py  payload_bin.py
batteryless_patch_rs/: Cargo.toml
batteryless_patch_rs/src/: batteryless_patch.rs  lib.rs  payload_bin.rs
emulator/: jagoombacolor_batteryless.gba
gba_patch/: CMakeLists.txt  build.sh  gba_patch.cpp  misc.cpp  misc.hpp  patch.cpp  patch.hpp
gba_patch/src/: data.cpp  data.hpp  error.cpp  error.hpp  gba.hpp  gba_patch.cpp  misc.cpp  misc.hpp  patch.cpp  patch.hpp
gba_patch_py/: data.py  patch.py
pyside6_ui/: MenuBuilderGUI.py
resources_src/: Config.py  I18n.py  Resource.py
rom_builder/: cartridge_config.py  rom_builder.py
rts_patch_py/: patcher.py  payload_bin.py
textual_ui/: MenuBuilder.css  MenuBuilder.py  MenuBuilderTUI.py
tkinter_ui/: MenuBuilderGUI.py
utils/: CheckSaveType.py  EmulatorBuilder.py  HeaderReader.py  MenuBuilder.py  Patcher.py  Patcher_py.py  Patcher_rs.py  PressAnyKey.py  Trim.py
