[project]
name = "LKMenuGUI"
version = "0.2"
description = "A GUI application for GBA Multimenu"
authors = [
    { name = "ZaindORp" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }  # 使用GPLv3许可证
keywords = ["gba", "gui", "menu", "application"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Environment :: CPU",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: English"
]
dependencies = [
    "pillow ~= 11.2.1",
    "pybind11 ~= 2.13.6",
    "sv-ttk ~=2.6.0"
]

[project.urls]
Homepage = "https://github.com/orzgithub/GBA_MultiMenu_GUI"
Repository = "https://github.com/orzgithub/GBA_MultiMenu_GUI"
Documentation = "https://github.com/orzgithub/GBA_MultiMenu_GUI#readme"
Issues = "https://github.com/orzgithub/GBA_MultiMenu_GUI/issues"

[dependency-groups]
dev = [
    "nuitka~=2.6.9",
    "ruff>=0.11.6",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"